fix(host): bound preinstall sentinel evidence